# agent-template

./: .gitignore  .gitleaks.toml  .mcp.json  .memoryhub.yaml  CHANGELOG.md  CLAUDE.md  NEXT_SESSION.md  README.md  SECURITY.md  llms.txt
sandbox/: Containerfile  README.md  app.py  executor.py  guardrails.py  landlock.py  profiles.py  pyproject.toml
sandbox/tests/: test_escape_vectors.py  test_executor.py  test_guardrails.py  test_integration.py  test_landlock.py  test_pipeline.py  test_profiles.py
templates/agent-loop/: .fips-template.yaml  AGENTS.md  CLAUDE.md  Containerfile  Makefile  README.md  agent.yaml  deploy.sh  pyproject.toml
templates/agent-loop/.claude/commands/: add-memory.md  add-skill.md  add-tool.md  create-agent.md  exercise-agent.md
templates/agent-loop/chart/: Chart.yaml  values.yaml
templates/agent-loop/chart/templates/: deployment.yaml  seccomp-profile.yaml
templates/agent-loop/evals/: __init__.py  discovery.py  evals.yaml  mock_factory.py  run_evals.py
templates/agent-loop/prompts/: system.md
templates/agent-loop/src/: agent.py
templates/agent-loop/src/base_agent/: __init__.py  agent.py  config.py  llm.py  memory.py  prompts.py
templates/agent-loop/tests/: test_agent.py  test_config.py  test_example_agent.py  test_llm.py  test_memory.py  test_prompts.py  test_rules.py  test_skills.py  test_tools.py
templates/agent-loop/tools/: _attached_file.py.example  format_citations.py  web_search.py
templates/workflow/: .fips-template.yaml  .memoryhub.yaml  AGENTS.md  CLAUDE.md  Containerfile  Makefile  agent.yaml  deploy.sh  pyproject.toml
templates/workflow/.claude/commands/: add-memory.md  add-skill.md  add-tool.md  create-agent.md  deploy-agent.md  exercise-agent.md  plan-agent.md
templates/workflow/.claude/rules/: workflow-development.md
templates/workflow/chart/: Chart.yaml  values.yaml
templates/workflow/chart/templates/: NOTES.txt  _helpers.tpl  (+5 more)
templates/workflow/evals/: __init__.py  assertions.py  discovery.py  evals.yaml  mock_factory.py  run_evals.py
templates/workflow/prompts/: system.md
templates/workflow/rules/: concise_output.md
templates/workflow/src/: agent.py
templates/workflow/tests/: test_agent_node.py  test_decorator.py  test_graph.py  test_integration.py  test_node.py  test_runner.py  test_state.py
templates/workflow/tools/: web_search.py
(+140 files in other folders)
