[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-template"
version = "0.1.0"
description = "Workflow template — compose AI agents into directed graphs"
requires-python = ">=3.11"
dependencies = [
    "base-agent",
]

[project.optional-dependencies]
memory = [
    "base-agent[memory]",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
